+ MinutePhysics; + minor edits.

--- a/science/index.html
+++ b/science/index.html
@@ -68,7 +68,7 @@
         and how science works.
       </li>
       <li>
-        <a href="https://www.youtube.com/user/SenseAboutScience">Sense About Science</a>, 
+        <a href="https://www.youtube.com/user/SenseAboutScience">Sense About Science</a>: 
         the YouTube channel of the British charity
         <a href="http://www.senseaboutscience.org/">Sense about Science</a>.
         <!-- @@add to separate list of sites about science / scientific literacy
@@ -81,29 +81,35 @@
         <!-- See other playlists: https://www.youtube.com/user/OUlearn/playlists?view=1&sort=dd -->
       </li>
       <li>
-        <a href="https://www.youtube.com/user/NatureVideoChannel">Nature Video</a>,
+        <a href="https://www.youtube.com/user/NatureVideoChannel">Nature Video</a>:
         the YouTube channel of the British scientific journal
         <a href="http://www.nature.com/">Nature</a>.
         <!-- https://en.wikipedia.org/wiki/Nature_%28journal%29 -->
       </li>
       <li>
-        <a href="https://www.youtube.com/user/SciAmerican">Scientific American</a>,
+        <a href="https://www.youtube.com/user/SciAmerican">Scientific American</a>:
         the YouTube channel of the American science magazine
         <a href="http://scientificamerican.com/">Scientific American</a>.
         <!-- https://en.wikipedia.org/wiki/Scientific_American -->
       </li>
       <li>
-        <a href="https://www.youtube.com/user/spektrumverlag" lang="de">Spektrum
-        Verlag</a>, the YouTube channel of 
+        <a href="https://www.youtube.com/user/spektrumverlag" lang="de">Spektrum Verlag</a>: 
+        the YouTube channel of 
         <a href="http://www.spektrum.de/" lang="de">Spektrum der Wissenschaft</a>,
         the German edition of <i>Scientific American</i>.
         <!-- https://de.wikipedia.org/wiki/Spektrum_der_Wissenschaft -->
       </li>
       <li>
-        <a href="https://www.youtube.com/user/newscientistvideo">New Scientist</a>,
+        <a href="https://www.youtube.com/user/newscientistvideo">New Scientist</a>:
         the YouTube channel of the British science magazine
         <a href="http://www.newscientist.com/">New Scientist</a>.
         <!-- https://en.wikipedia.org/wiki/New_Scientist -->
+      </li>
+      <li>
+        <a href="https://www.youtube.com/channel/UCUHW94eEFW7hkUMVaZz4eDg">MinutePhysics</a>:
+        a YouTube channel with short videos about physics and other sciences.
+        It even has an
+        <a href="https://www.youtube.com/watch?v=hhn-RzMELhY">astrononmically correct version of &ldquo;Twinkle twinkle&rdquo;</a>.
       </li>
       <li>
         <a href="https://www.youtube.com/channel/UCiAcn7mtouzR659xl6uNsOw"
