Minor edit: language markup.

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
+<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
   <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
@@ -88,7 +88,7 @@
       </li>
       <li lang="de">Römpp, Georg:
         <i class="booktitle">Hegel leicht gemacht: Eine Einführung in seine Philosophie</i>.
-        Köln: Böhlau, 2008. <span lang="en">(298 p.)
+        Köln: Böhlau, 2008. <span lang="en-GB">(298 p.)
         <a href="http://www.utb-shop.de/hegel-leicht-gemacht-2584.html"><abbr>ISBN</abbr> 9783825231149</a>.
         <br />An introduction for beginning philosophy students.
         Its bibliography contains useful annotations and helps students find out which 
@@ -97,7 +97,7 @@
       </li>
       <li lang="de">Emundts, Dina; Horstmann, Rolf-Peter:
         <i class="booktitle">Georg Wilhelm Friedrich Hegel. Eine Einführung</i>.
-        Stuttgart: Reclam, 2002. <span lang="en">(112 p.)
+        Stuttgart: Reclam, 2002. <span lang="en-GB">(112 p.)
         <a href="http://www.reclam.de/detail/978-3-15-018167-6/Emundts__Dina__Horstmann__Rolf_Peter/Georg_Wilhelm_Friedrich_Hegel"><abbr>ISBN</abbr> 978-3-15-018167-6</a>.
         <br />Contains a short biography and then discusses the development of Hegel's system in his early years,
         the &ldquo;system&rdquo; itself, its metaphysical foundations, and the later works.
@@ -106,13 +106,13 @@
       </li>
       <li lang="de">Schnädelbach, Herbert:
         <i class="booktitle">Georg Wilhelm Friedrich Hegel zur Einführung</i>. 3., verbesserte Auflage.
-        Hamburg: Junius, 2007. <span lang="en">(192 p.)
+        Hamburg: Junius, 2007. <span lang="en-GB">(192 p.)
         <a href="http://www.junius-verlag.de/buecher/georg-wilhelm-friedrich-hegel"><abbr>ISBN</abbr> 978-3-88506-352-0</a>.
         <br />Recommended as a thorough introduction by Römpp (see above), but not an easy read.</span>
-        Schnädelbach <span lang="en">starts with the basic ideas that one needs to understand Hegel's work,
+        Schnädelbach <span lang="en-GB">starts with the basic ideas that one needs to understand Hegel's work,
         especially the dialectic way of reasoning. The rest of the book then progresses through Hegel's
         major works, starting with the </span> <i class="booktitle">Differenzschrift</i>.
-        Schnädelbach <span lang="en">points out that Hegel's own introductions to his system
+        Schnädelbach <span lang="en-GB">points out that Hegel's own introductions to his system
         make certain assumptions that are part of his system, and as a consequence there is no way
         into his system without taking a sort of leap of faith.The author also points out
         that modern Hegelians have reduced the 
