--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
+<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
   <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
@@ -48,7 +48,7 @@
     <blockquote id="introquote">
       <p lang="fr">
         <q cite="https://archive.org/details/QuePhilosopherCEstApprendreAMourir">Philosopher, c'est apprendre à mourir </q>
-        (<span lang="en">To philosophise is to learn to die.</span>)
+        (<span lang="en-GB">To philosophise is to learn to die.</span>)
         <cite><a href="https://fr.wikipedia.org/wiki/Michel_de_Montaigne">Michel de Montaigne</a>, 
         <a href="https://fr.wikipedia.org/wiki/Essais" class="booktitle">Essais</a>, Livre 1 (1580).
         </cite>
@@ -215,14 +215,14 @@
         <i class="booktitle">Was ist das - die Philosophie?</i>
         (1955) 12. Auflage. Klett-Cotta, 2003. 
         <a href="http://www.klett-cotta.de/buch/Philosophie/Was_ist_das_-_die_Philosophie_/4974"><abbr>ISBN</abbr> 978-3-608-91091-9</a>.
-        <br /><span lang="en">English translation:
+        <br /><span lang="en-GB">English translation:
         <a href="https://en.wikipedia.org/wiki/What_is_Philosophy%3F_%28Heidegger%29">What is Philosophy?</a>.</span>
       </li>
       <li lang="fr">Deleuze, Gilles; Guattari, Félix:
         <i class="booktitle">Qu'est-ce que la philosophie&nbsp;?</i>
         Les éditions de Minuit, 1991. Collection « Critique ». (208 p.)
         <a href="http://www.leseditionsdeminuit.com/f/index.php?sp=liv&livre_id=2024"><abbr>ISBN</abbr> 2707313866</a> 
-        (<span lang="en">This webpage also contains excerpts from reviews of the book.</span>) / 
+        (<span lang="en-GB">This webpage also contains excerpts from reviews of the book.</span>) / 
         <a href="http://vitrine.edenlivres.fr/publications/30636-qu-est-ce-que-la-philosophie-"><abbr>ISBN</abbr>  9782707319425</a>/
         <abbr>ISBN</abbr>  9782707327857 (<abbr>PDF</abbr>).
         <br />See also the 
@@ -484,7 +484,7 @@
         C. H. Beck, 2012. 
         <a href="http://www.chbeck.de/Schnaedelbach-Philosophen-wissen/productview.aspx?product=9761200"><abbr>ISBN</abbr> 978-3-406-63360-7</a>.
         <br />
-        <span lang="en">This book counters the idea that philosophy makes no 
+        <span lang="en-GB">This book counters the idea that philosophy makes no 
         progress by pointing out that introductory courses in philosophy have a 
         lot of content in common, so there is an implicit consensus on what 
         philosophers know. <span lang="de">Schnädelbach</span> tries to 
@@ -516,7 +516,7 @@
         Odile Jacob, 1988. 
         <a href="http://www.odilejacob.fr/catalogue/sciences-humaines/philosophie/pour-la-connaissance-philosophique_9782738100238.php"><abbr>ISBN</abbr> 9782738100238</a>.
         <br />
-        <span lang="en">This book discusses whether philosophy is a type of 
+        <span lang="en-GB">This book discusses whether philosophy is a type of 
         knowledge and whether there are philosophical truths.</span>
       </li>
     </ul>
@@ -811,13 +811,13 @@
       </li>
       <li lang="de">Hoyningen-Huene, Paul:
         <a href="https://www.youtube.com/playlist?list=PLHwUrKo7SDpQSH9Txz-3fEbKfCMORq8X9">Formale Logik. Eine philosophische Einführung</a>
-        <span lang="en">is a series of 21 videos/lectures (taught in 2012) based on the book</span>
+        <span lang="en-GB">is a series of 21 videos/lectures (taught in 2012) based on the book</span>
         <i class="booktitle">Formale Logik. Eine philosophische Einführung</i>. Stuttgart: Reclam, 1998.
         <a href="http://www.reclam.de/detail/978-3-15-009692-5/Hoyningen_Huene__Paul/Formale_Logik"><abbr>ISBN</abbr> 978-3-15-009692-5</a>.
       </li>
       <li lang="de">Hoyningen-Huene, Paul:
         <a href="https://www.youtube.com/playlist?list=PLHwUrKo7SDpTIMNb6uHZzscAhO3_v8F5d">Einführung in die Logik</a>
-        <span lang="en">is a series of 22 videos based on the same course as the previous playlist, but uncut.</span>
+        <span lang="en-GB">is a series of 22 videos based on the same course as the previous playlist, but uncut.</span>
         <!-- @@check differences -->
       </li>
       <li><a href="https://www.youtube.com/playlist?list=PL8CE6188299CCFA23" lang="fr">Logique et raisonnements</a>
@@ -1213,6 +1213,15 @@
       </li>
     </ul>
 
+    <h2>Unsorted Links</h2>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=nQHBAdShgYI">The Trouble with Transporters</a>
+        is a 6-minute video by <abbr>CGP</abbr> Grey
+        that discusses the subject of identity (and at some point refers to the
+        <a href="https://en.wikipedia.org/wiki/Ship_of_Theseus">ship of Theseus</a>).
+      </li>
+    </ul>
 
     <!-- Richard Dawkins: "The Tyranny of the Discontinuous Mind": https://richarddawkins.net/2013/01/the-tyranny-of-the-discontinuous-mind-christmas-2011/
       Originally published in New Statesman, the Christmas issue for 2011, of which Dawkins was guest Editor. 
