--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
+<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
   <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
@@ -78,7 +78,7 @@
       <li lang="de">Pfister, Jonas: 
         <i class="booktitle">Werkzeuge des Philosophierens</i>. Stuttgart: Reclam, 2013.
         <a href="http://www.reclam.de/detail/978-3-15-019138-5/Pfister__Jonas/Werkzeuge_des_Philosophierens"><abbr>ISBN</abbr> 978-3-15-019138-5</a>.
-        <span lang="en">An excellent introduction. Each chapter has exercises with solutions.
+        <span lang="en-GB">An excellent introduction. Each chapter has exercises with solutions.
         The list of further reading also explains where to go after reading this book.</span>
       </li>
       <li>Rosenberg, Jay F.
@@ -125,7 +125,7 @@
         <i class="booktitle">Textanalyse in den Wissenschaften: Inhalte und Argumente analysieren und verstehen</i>. 
         2., überarbeitete Auflage. vdf Hochschulverlag AG, 2014. (352 p.) 
         <a href="http://www.vdf.ethz.ch/vdf.asp?isbnNr=3645"><abbr>ISBN</abbr> 978-3-7281-3645-9</a>.
-        <span lang="en">This is one of the books recommended by </span> Jonas Pfister.
+        <span lang="en-GB">This is one of the books recommended by </span> Jonas Pfister.
       </li>
       <li>deLaplante, Kevin:
         <a href="https://www.youtube.com/playlist?list=PLDF3C877967DFDEC6">How to Write a Good Argumentative Essay</a>:
@@ -146,7 +146,7 @@
         <i class="booktitle">Disziplinen der Philosophie: Ein Kompendium</i>. Philosophische Bibliothek 666.
         Hamburg: Felix Meiner, 2014. (672 p.)
         <a href="https://meiner.de/disziplinen-der-philosophie.html"><abbr>ISBN</abbr> 978-3-7873-2531-3</a>.
-        <br /><span lang="en">Covers disciplines such as analytical philosophy,
+        <br /><span lang="en-GB">Covers disciplines such as analytical philosophy,
         applied ethics, epistemology, philosophy of art, logic, metaphysics, ontology,
         phenomenology, philosophical anthropology, political philosophy and philosophy of religion.
         </span>
