--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
+<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
   <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
@@ -213,13 +213,13 @@
       <li lang="fr">
         <a href="https://www.youtube.com/watch?v=wgEFC44at58">L’athéisme, l’opium du peuple de gauche - Pierre Tevanian</a>
         (2015).
-        <span lang="en">Podcast / recording of a talk by the French philosophy professor/teacher and essayist</span>
+        <span lang="en-GB">Podcast / recording of a talk by the French philosophy professor/teacher and essayist</span>
         <a href="https://fr.wikipedia.org/wiki/Pierre_Tevanian" hreflang="fr">Pierre Tevanian</a>
-        <span lang="en">based on his book</span>
+        <span lang="en-GB">based on his book</span>
         <i class="booktitle">La haine de la religion: Comment l'athéisme est devenu l'opium du peuple de gauche</i>
         (La Découverte, 2013. 128 p. 
         <a href="http://www.editionsladecouverte.fr/catalogue/index-La_haine_de_la_religion-9782707175908.html" hreflang="fr"><abbr>ISBN</abbr> 9782707175908</a>.)
-        <span lang="en">(<i class="booktitle">Hate against Religion: How Atheism Became the Opium of the Left</i>).</span>
+        <span lang="en-GB">(<i class="booktitle">Hate against Religion: How Atheism Became the Opium of the Left</i>).</span>
       </li>
     </ul>
     -->
