--- a/philscience/fleck_ludwik.html
+++ b/philscience/fleck_ludwik.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
+<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
   <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
@@ -51,7 +51,7 @@
         <q>In der Naturwissenschaft gibt es gleichwie in der Kunst und
         im Leben keine andere Naturtreue als die Kulturtreue.
         </q>
-        (<span lang="en">In natural science, as in art and in life, 
+        (<span lang="en-GB">In natural science, as in art and in life, 
         being true to nature is only possible by being true to culture.</span>)
         <cite>Ludwik Fleck, 
           <span class="booktitle">Entstehung und Entwicklung einer wissenschaftlichen Tatsache</span>. 
@@ -456,10 +456,10 @@
         <i class="booktitle">Entstehung und Entwicklung einer wissenschaftlichen Tatsache - Einführung in die Lehre vom Denkstil und Denkkollektiv</i>. 
         Mit einer Einleitung herausgegeben von Lothar Schäfer und Thomas Schnelle. Suhrkamp, 1980. 
         <a href="http://www.suhrkamp.de/buecher/entstehung_und_entwicklung_einer_wissenschaftlichen_tatsache-ludwik_fleck_27912.html"><abbr>ISBN</abbr> 978-3-518-27912-0</a>.
-        <span lang="en">Originally published by</span> Benno Schwabe <span lang="en"> in Basel in 1935.
+        <span lang="en-GB">Originally published by</span> Benno Schwabe <span lang="en-GB"> in Basel in 1935.
         <br />Translations: </span>
         <ul>
-          <li lang="en"><span lang="de">Fleck, Ludwik</span>: 
+          <li lang="en-GB"><span lang="de">Fleck, Ludwik</span>: 
             <i class="booktitle">Genesis and Development of a Scientific Fact</i>. 
             Translated by Frederick Bradley and Thaddeus J. Trenn. Foreword by Thomas S. Kuhn.
             University of Chicago Press, 1979. (203 p.) 
@@ -518,7 +518,7 @@
         Herausgegeben von Sylwia Werner und Claus Zittel unter Mitarbeit von 
         <a href="https://en.wikipedia.org/wiki/Frank_W._Stahnisch">Frank Stahnisch</a>. Suhrkamp, 2011. 
         <a href="http://www.suhrkamp.de/buecher/denkstile_und_tatsachen-ludwik_fleck_29553.html"><abbr>ISBN</abbr> 978-3-518-29553-3</a>.
-        <br /><span lang="en">This volume of over 600 pages contains a selection of articles; 
+        <br /><span lang="en-GB">This volume of over 600 pages contains a selection of articles; 
         reports and documents about Fleck's work in the Nazi concentration camps;
         and biographical materials (especially correspondence with other philosophers and scientists).
         </span>
@@ -527,7 +527,7 @@
         <i class="booktitle">Erfahrung und Tatsache - Gesammelte Aufsätze</i>. 
         Mit einer Einleitung herausgegeben von Lothar Schäfer und Thomas Schnelle. Suhrkamp, 1983. 
         <a href="http://www.suhrkamp.de/buecher/erfahrung_und_tatsache-ludwik_fleck_28004.html"><abbr>ISBN</abbr> 978-3-518-28004-1</a>. 
-        <br /><span lang="en">In addition to an introduction and a bibliography of Fleck's writings, the book contains the following articles:</span>
+        <br /><span lang="en-GB">In addition to an introduction and a bibliography of Fleck's writings, the book contains the following articles:</span>
         &ldquo;Über einige besondere Merkmale des ärztlichen Denkens&rdquo; (1927), 
         &ldquo;Zur Krise der »Wirklichkeit«&rdquo; (1929), 
         &ldquo;Über die wissenschaftliche Beobachtung und die Wahrnehmung im allgemeinen&rdquo; (1935), 
@@ -535,7 +535,7 @@
         &ldquo;Wissenschaftstheoretische Probleme&rdquo; (1946), 
         &ldquo;Schauen, sehen, wissen&rdquo; (1947),
         &ldquo;Krise in der Wissenschaft. Zu einer freien und menschlichen Wissenschaft&rdquo; (1960).
-        <span lang="en">These articles were also included in </span>
+        <span lang="en-GB">These articles were also included in </span>
         <i class="booktitle">Denkstile und Tatsachen - Gesammelte Schriften und Zeugnisse</i> (2011).
       </li>
     </ul>
@@ -572,7 +572,7 @@
       </li>
       <li lang="de">Brühe, Roland; Theis, Sabine: 
         <a href="http://rolandbruehe.de/ludwik-fleck/ludwik-fleck-person/">Zur Person Ludwik Fleck</a>,
-        <span lang="en">excerpted from</span> 
+        <span lang="en-GB">excerpted from</span> 
         <a class="booktitle" href="http://www.pflegeportal.ch/pflegeportal/Pflege_Portal_Suche_in_WISE.php?evn=srm&kc=0,23,0,0,0&pmids=9&st=1&rpp=3&fkid=fkid&nsfkid=15,1&msv=">Denkstile und professioneller Pflegeprozess</a> 
         (Diplomarbeit, Katholische Hochschule Nordrhein-Westfalen, 05.07.2004 - 20.09.2009).
         (Brühe, Roland; Theis, Sabine: 
@@ -593,7 +593,7 @@
         <i class="booktitle">Tatsache - Denkstil - Kontroverse: Auseinandersetzungen mit Ludwik Fleck</i>. 
         Collegium Helveticum Heft 1. Zürich: Collegium Helveticum, 2005. (98 p.)
         <a href="http://www.collegium.ethz.ch/de/medien-und-oeffentlichkeit/publikationen/publikationen-des-collegium-helveticum/tatsache-denkstil-kontroverse-auseinandersetzungen-mit-ludwik-fleck/"><abbr>ISBN</abbr> 3-9522441-2-0</a>.
-        <br /><span lang="en">This book has gone out of print but can be downloaded as a
+        <br /><span lang="en-GB">This book has gone out of print but can be downloaded as a
         <a href="http://www.collegium.ethz.ch/fileadmin/autoren/docs/ch_pics/publ_off_the_ch/Tatsache_Denkstil_Kontroverse.pdf"><abbr>PDF</abbr> file</a>.</span>
       </li>
       <li><span lang="de">Egloff, Rainer; Fehr, Johannes</span>, <abbr>ed.</abbr>: 
@@ -655,7 +655,7 @@
         <a href="https://de.wikipedia.org/wiki/Der_SS-Staat" class="booktitle" hreflang="de">Der <abbr>SS</abbr>-Staat – Das System der deutschen Konzentrationslager</a>.
         München: Karl Alber, 1946. Heyne Verlag, 1988.
         <a href="http://www.randomhouse.de/Taschenbuch/Der-SS-Staat/Eugen-Kogon/Heyne/e163541.rhd"><abbr>ISBN</abbr> 978-3-453-02978-1</a>.
-        <br /><span lang="en">This book contains Fleck's testimony about his time in Buchenwald.
+        <br /><span lang="en-GB">This book contains Fleck's testimony about his time in Buchenwald.
         <a href="https://en.wikipedia.org/wiki/Eugen_Kogon" lang="de" hreflang="en">Eugen Kogon</a> was also in Buchenwald and
         for some time worked as a clerk for camp doctor 
         <a href="https://en.wikipedia.org/wiki/Erwin_Ding-Schuler" lang="de" hreflang="en">Erwin Ding-Schuler</a>, 
@@ -707,7 +707,7 @@
         <i class="booktitle">Ludwik Fleck – Leben und Denken. Zur Entstehung und Entwicklung des soziologischen Denkstils in der Wissenschaftsphilosophie</i>. 
         Freiburg: Hochschulverlag, 1982. Hochschulsammlung Philosophie: Philosophie, Band 3.
         <abbr>ISBN</abbr> 3-8107-2165-4; <abbr>ISSN</abbr> 0720-5392.
-        <br /><span lang="en">Dissertation, Hamburg, 1982.</span>
+        <br /><span lang="en-GB">Dissertation, Hamburg, 1982.</span>
       </li>
       <li lang="nl">Thoutenhoofd, Ernst D.:
         <a href="http://docslide.nl/education/actor-netwerk-theorie-in-de-sociale-wetenschappen.html">De sociale participatie van objecten: Bruno Latour en actor-network theorie (<abbr>ANT</abbr>) in de sociale wetenschappen</a>,
@@ -716,7 +716,7 @@
       <li lang="nl">van der Meer, J. M.:
         <a href="http://www.digibron.nl/search/detail/78dc926573ebfafb7688214cb48e55ce/drie-studies-over-buitenwetenschappelijke-invloeden-in-de-geschiedenis-van-biologische-en-astronomische-idee-n">Drie studies over 'buitenwetenschappelijke' invloeden in de geschiedenis van biologische en astronomische ideeën</a>,
         <i class="magazine">Radix</i>, 1 april 1981, pp. 4 - 24 (<i class="website">Digibron.nl</i>).
-        <span lang="en">Dutch article on Ludwik Fleck, Jürgen Hübner and Neal C. Gillespie.</span>
+        <span lang="en-GB">Dutch article on Ludwik Fleck, Jürgen Hübner and Neal C. Gillespie.</span>
       </li>
       <li>von der Ohe, Werner:
         <a href="https://www.researchgate.net/publication/34345598_Serendipity_reconsidered_sociological_and_metatheoretical_considerations_regarding_the_occurrence_and_appreciation_of_unanticipated_research_results">Serendipity reconsidered sociological and metatheoretical considerations regarding the occurrence and appreciation of unanticipated research results</a>.
