--- a/philscience/index.html
+++ b/philscience/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
+<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
   <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
@@ -325,7 +325,7 @@
         <i class="booktitle">Wetenschappelijk denken. Een inleiding voor de medische en biomedische wetenschappen</i>.
         Tweede, herziene druk. Leuven: Acco, 2012. (247 p.)
         <a href="https://www.acco.be/nl-be/items/9789033489334/Wetenschappelijk-denken"><abbr>ISBN</abbr> 978-90-334-8933-4</a>.
-        <br /><span lang="en">
+        <br /><span lang="en-GB">
         This book is not so much an introduction to philosophy of science as an introduction to scientific thinking and practice.
         The first part explains the development of the scientific worldview, 
         then discusses scientific thinking as a method, as a social phenomenon, 
@@ -398,7 +398,7 @@
         <i class="booktitle">Textes Clés de l’histoire des sciences. Méthodes, styles et controverses</i>. 
         Textes clés. Vrin, 2008. (384 p.) 
         <a href="http://www.vrin.fr/book.php?code=9782711619337"><abbr>ISBN</abbr> 978-2-7116-1933-7</a>.
-        <br /><span lang="en">This anthology contains texts by G. Bachelard, G. Canguilhem, 
+        <br /><span lang="en-GB">This anthology contains texts by G. Bachelard, G. Canguilhem, 
         A. Comte, A. Crombie, L. Daston, P. Duhem, L. Fleck, M. Foucault, A. Koyré, 
         T. Kuhn, P. Laffitte, R.K. Merton and P. Tannery.
         </span>
@@ -407,7 +407,7 @@
         <i class="booktitle">Wissenschaftsphilosophie</i>. Alber-Texte Philosophie. 
         Freiburg; München: Karl Alber, 1999. (192 p.) 
         <a href="http://www.verlag-alber.de/suche/details_html?k_tnr=48005"><abbr>ISBN</abbr> 978-3-495-48005-2</a>. 
-        <br /><span lang="en">A rather short anthology that starts with 
+        <br /><span lang="en-GB">A rather short anthology that starts with 
         Francis Bacon's <a href="https://en.wikipedia.org/wiki/Novum_Organum" class="booktitle">Novum Organum</a>.
         The authors provide an introduction to each of the texts.</span>
       </li>
@@ -505,7 +505,7 @@
       <li lang="fr">Thom, René: 
         <i class="booktitle">Prédire n’est pas expliquer</i>. (1993) Champs Sciences. Flammarion, 2009. 
         <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=35024&levelCode=home"><abbr>ISBN</abbr> 9782081224988</a>.
-        <br /><span lang="en"><a href="https://en.wikipedia.org/wiki/Ren%C3%A9_Thom" lang="fr">René Thom</a> 
+        <br /><span lang="en-GB"><a href="https://en.wikipedia.org/wiki/Ren%C3%A9_Thom" lang="fr">René Thom</a> 
         was a French mathematician who is probably best know as the founder of
         <a href="https://en.wikipedia.org/wiki/Catastrophe_theory">catastrophy theory</a>.
         <!-- See also P. de Brem: "René Thom, mathématicien philosophe", Banque de Savoirs, Essonne, 01.06.2005: http://www.savoirs.essonne.fr/thematiques/la-matiere/mathematiques/rene-thom-mathematicien-philosophe/ -->
