--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
+<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
   <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
@@ -418,9 +418,9 @@
       <li>
         <a href="https://en.wikipedia.org/wiki/Stanford_prison_experiment">Stanford prison experiment</a>.
       </li>
-      <li><a href="https://en.wikipedia.org/wiki/Chess#Psychology">Chess sychology</a>,
+      <li><a href="https://en.wikipedia.org/wiki/Chess#Psychology">Chess psychology</a>,
         for example the research by the Dutch psychologist
-        <a href="https://en.wikipedia.org/wiki/Adriaan_de_Groot" lang="de" hreflang="en">Adriaan de Groot</a>
+        <a href="https://en.wikipedia.org/wiki/Adriaan_de_Groot" lang="nl" hreflang="en">Adriaan de Groot</a>
         or by the Swiss psychologist
         <a href="https://en.wikipedia.org/wiki/Fernand_Gobet">Fernand Gobet</a>.
         (So not necessarily in the sense of the following video: <a href="https://www.youtube.com/watch?v=Rvzw21_3Hs4">Chess Psychology PHENOMENAL Way to Turn Your Thinking Around &amp; WIN</a> (YouTube, 34 minutes).
