--- a/science/index.html
+++ b/science/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
+<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
   <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
@@ -204,7 +204,7 @@
         <i class="booktitle">Kleine geschiedenis van de wetenschap</i>.
         Nieuwezijds, 2005. 
         <a href="http://www.nieuwezijds.nl/Boek/9789057122248/Kleine-geschiedenis-van-de-wetenschap/"><abbr>ISBN</abbr> 9789057122248</a> (278 p.).<br />
-        <span lang="en">A very readable introduction that focuses on how 
+        <span lang="en-GB">A very readable introduction that focuses on how 
         the world view of (originally) philosophers and (later) scientists 
         evolved and how this changing perspective both gave rise to new
         methods and was influence by these methods. In addition to the evolution
