--- a/humanities/index.html
+++ b/humanities/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
+<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
   <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
@@ -48,7 +48,7 @@
     <blockquote id="introquote">
       <p lang="fr">
         <q cite="https://archive.org/details/QuePhilosopherCEstApprendreAMourir">Philosopher, c'est apprendre à mourir </q>
-        (<span lang="en">To philosophise is to learn to die.</span>)
+        (<span lang="en-GB">To philosophise is to learn to die.</span>)
         <cite><a href="https://fr.wikipedia.org/wiki/Michel_de_Montaigne">Michel de Montaigne</a>, 
         <a href="https://fr.wikipedia.org/wiki/Essais" class="booktitle">Essais</a>, Livre 1 (1580).
         </cite>
