(Science Day idea: potentially relevant ref.)

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -343,6 +343,10 @@
         <i class="booktitle" lang="fr">Pour en finir avec le Moyen Age</i>. [1944] Points, 2014. 
         <abbr>ISBN</abbr> 978-2757841075.
       </li>
+      <li>(Potentially relevant: ) Thomas, Keith:
+        <i class="booktitle">Religion and the Decline of Magic</i>. Peregrine Books, 1978. 
+        <!-- Used by Fintan O'Toole: "Shakespeare is Hard, but so is Life". -->
+      </li>
     </ul>
 
     <h4>The Scottish Enlightenment</h4>
