--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -83,6 +83,7 @@
     <h2>Science Day Topics</h2>
     <p>Below is a list of potential Science Day topics with relevant references.</p>
 
+
     <h3>Chinese History</h3>
     <h4>The First Chinese Emperor</h4>
     <p>See:</p>
@@ -127,6 +128,7 @@
         2nd edition. Getty Conservation Institute, 2015.
       </li>
     </ul>
+
     <h4>The Silk Road</h4>
     <ul>
       <li>Millward, James A.: 
@@ -153,6 +155,7 @@
       <li>See perhaps also Owen Lattimore (<abbr>e.g.</abbr> <i class="booktitle">Silks, Spices and Empire</i>). 
       </li>
     </ul>
+
     <h4>The Tibetan Empire</h4>
     <ul>
       <li lang="fr">Deshayes, Laurent: 
@@ -182,6 +185,7 @@
         <!-- Introduction: http://press.princeton.edu/chapters/i8882.pdf -->
       </li>
     </ul>
+
     <h4>Science and Technology During the Song Dynasty</h4>
     <ul>
       <li>
@@ -227,6 +231,27 @@
         -->
       </li>
     </ul>
+
+    <h4>The Opium Wars</h4>
+    <ul>
+      <li>Waley, Arthur: 
+        <i class="booktitle">The Opium War Through Chinese Eyes</i>. Stanford University Press, 1958.
+        <!-- a href=""></a -->
+        <abbr>ISBN</abbr> 9780804706117. 
+      </li>
+      <li>Lovell, Julia: 
+        <i class="booktitle">The Opium War: Drugs, Dreams and the Making of China</i>. Pan Macmillan.
+        <a href="http://www.panmacmillan.com/book/julialovell/theopiumwar?format=978033045748401"><abbr>ISBN</abbr> @@</a>.
+      </li>
+      <li>Zheng, Yangwen: 
+        <i class="booktitle">The Social Life of Opium in China</i>. Cambridge: Cambridge University Press, 2005.
+        <!--a href=""><abbr>ISBN</abbr> </a-->
+      </li>
+      <li><abbr>BBC</abbr> Radio 4:
+        <a href="http://www.bbc.co.uk/programmes/b00776k9">The Opium Wars</a> (In Our Time).
+      </li>
+    </ul>
+
     <h4>4 May 1919 / May Fourth Movement</h4>
     <ul>
       <li>
