Opium War: book details.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -236,16 +236,15 @@
     <ul>
       <li>Waley, Arthur: 
         <i class="booktitle">The Opium War Through Chinese Eyes</i>. Stanford University Press, 1958.
-        <!-- a href=""></a -->
-        <abbr>ISBN</abbr> 9780804706117. 
+        <a href="http://www.sup.org/books/title/?id=3183"><abbr>ISBN</abbr> 9780804706117</a>.
       </li>
       <li>Lovell, Julia: 
         <i class="booktitle">The Opium War: Drugs, Dreams and the Making of China</i>. Pan Macmillan.
-        <a href="http://www.panmacmillan.com/book/julialovell/theopiumwar?format=978033045748401"><abbr>ISBN</abbr> @@</a>.
+        <a href="http://www.panmacmillan.com/book/julialovell/theopiumwar?format=978033045748401"><abbr>ISBN</abbr> 978033045748401 (?)</a>.
       </li>
       <li>Zheng, Yangwen: 
         <i class="booktitle">The Social Life of Opium in China</i>. Cambridge: Cambridge University Press, 2005.
-        <!--a href=""><abbr>ISBN</abbr> </a-->
+        <a href="http://www.cambridge.org/de/academic/subjects/history/east-asian-history/social-life-opium-china?format=PB"><abbr>ISBN</abbr> 9780521608565</a>
       </li>
       <li><abbr>BBC</abbr> Radio 4:
         <a href="http://www.bbc.co.uk/programmes/b00776k9">The Opium Wars</a> (In Our Time).
@@ -260,15 +259,15 @@
       <li>Lu Xun: 
         <a href="https://en.wikipedia.org/wiki/A_Madman%27s_Diary">A Madman's Diary (1918)</a>.
       </li>
-      <li>Rana Mitter
+      <li>Mitter, Rana: 
         <i class="booktitle">A Bitter Revolution. China's Struggle with the Modern World</i>. Oxford: Oxford University Press, 2004.
         <a href="https://global.oup.com/academic/product/a-bitter-revolution-9780192806055"><abbr>ISBN</abbr> 9780192806055</a>.
       </li>
-      <li>Jonathan D. Spence:
+      <li>Spence, Jonathan D. :
         <i class="booktitle">The Search for Modern China</i>. New York: Norton, 1999; third edition, 2012. (976 p.)
         <a href="http://books.wwnorton.com/books/webad.aspx?id=4294970239"><abbr>ISBN</abbr> 978-0-393-93451-9</a>.
       </li>
-      <li>Jonathan D. Spence:
+      <li>Spence, Jonathan D. :
         <i class="booktitle">The Search for Modern China: A Documentary Collection</i>. New York: Norton, 2013. (656 pages)
         <a href="http://books.wwnorton.com/books/webad.aspx?id=4294974470"><abbr>ISBN</abbr> 978-0-393-92085-7</a>.
       </li>
