+ History of climate change.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -102,7 +102,7 @@
       <li>Man, John: 
         <i class="booktitle">The Terracotta Army</i>. Bantam 2007.
       </li>
-      <li>Jane Portal: 
+      <li>Portal, Jane: 
         <i class="booktitle">The First Emperor: China's Terracotta Army</i>. 
         Atlanta: High Museum of Art, 2008.
         (See <a href="http://www.ajaonline.org/online-review-museum/369">The First Emperor: China’s Terracotta Army</a>, <abbr>AJA</abbr> Online, July 2009.)
@@ -118,6 +118,7 @@
         <a href="http://ukcatalogue.oup.com/product/9780199574391.do"><abbr>ISBN</abbr> 978-0-19-957439-1</a>. 
       </li>
     </ul>
+
     <h4>The Dunhuang Caves / Mogao</h4>
     <ul>
       <li>
@@ -411,6 +412,34 @@
       <li>Wilson, David B.:
         <i class="booktitle">Seeking Nature's Logic: Natural Philosophy in the Scottish Enlightenment</i>. 
         Pennsylvania State University Press, 2009.
+      </li>
+    </ul>
+
+    <h4>History of Climate Change</h4>
+    <ul>
+      <li lang="fr">Le Roy Ladurie, Emmanuel:
+        <i class="booktitle">Histoire du climat depuis l'an mil, tome 1</i>. [1967] Flammarion, 2009.
+        <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=35963&levelCode=home"><abbr>ISBN</abbr> 978 20 81 22 86 89</a>.
+        <br />
+        <i class="booktitle">Histoire du climat depuis l'an mil, tome 2</i>. Flammarion, 2009.
+        <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=35964&levelCode=home"><abbr>ISBN</abbr> 978 20 81 22 86 96</a>.
+      </li>
+      <li>Lamb, Hubert H.:
+        <i class="booktitle">Climate: Present, Past and Future: Volume 1: Fundamentals and Climate Now</i>. [1972]. Routledge, 2012.
+        <a href="http://www.routledge.com/books/details/9780415682220/"><abbr>ISBN</abbr> 978-0-415-68222-0</a>.
+        <br />
+        <i class="booktitle">Climate: Present, Past and Future: Volume 2: Climatic History and the Future</i>. [1977]. Routledge, 2012.
+        <a href="http://www.routledge.com/books/details/9780415682237/"><abbr>ISBN</abbr> 978-0-415-68223-7</a>.
+      </li>
+      <li lang="de">Reichholf, Josef:
+        <i class="booktitle">Eine kurze Naturgeschichte des letzten Jahrtausends</i>. S. Fischer Verlag, 2008.
+        <a href="http://www.fischerverlage.de/buch/eine_kurze_naturgeschichte_des_letzten_jahrtausends/9783596174393"><abbr>ISBN</abbr> 978-3-596-17439-3</a>
+      </li>
+      <li lang="de">Behringer, Wolfgang: 
+        <i class="booktitle">Kulturgeschichte des Klimas</i>. Dtv, 2012. 4. Auflage, 2014.
+        <a href="http://www.dtv.de/buecher/kulturgeschichte_des_klimas_34652.html"><abbr>ISBN</abbr> 978-3-423-34652-8</a>.
+      </li>
+      <li>(Also check climate change and Chinese history (e.g. end of the Ming dynasty).)
       </li>
     </ul>
 
