+ The Voyages of Zheng He.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -85,7 +85,7 @@
 
 
     <h3>Chinese History</h3>
-    <h4>The First Chinese Emperor</h4>
+    <h4>The First Emperor of China</h4>
     <p>See:</p>
     <ul>
       <li lang="fr">Gernet, Jacques: 
@@ -233,6 +233,16 @@
       </li>
     </ul>
 
+    <h4>The Voyages of Zheng He</h4>
+    <!-- @@link wikipedia -->
+    <ul>
+      <li>Dreyer, Edward L.: 
+        <i class="booktitle">Zheng He: China and the Oceans in the Early Ming Dynasty, 1405-1433</i>.
+        Library of World Biography Series.
+        <!-- <a href=""><abbr>ISBN</abbr> </a>. -->
+      </li>
+    </ul>
+
     <h4>The Opium Wars</h4>
     <ul>
       <li>Waley, Arthur: 
@@ -285,6 +295,7 @@
         </ul>
       </li>
     </ul>
+
 
     <h3>European History</h3>
     <h4>The Crusades Through Arab / Islamic Eyes</h4>
